[package]
name = "balances"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
polars = { version = "0.35.4", features = ["csv", "lazy","cum_agg", "polars-io"] }

[[bin]]
name="balances"
path="bin/balances.rs"
