[package]
name = "balances"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.31"
comfy-table = "7.1.0"
numfmt = "1.1.1"
polars = { version = "0.50.0", features = ["csv", "lazy","cum_agg", "polars-io", "regex"] }
polars-arrow = "0.35.4"

[[bin]]
name="balances"
path="bin/balances.rs"
